--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@
 
 .container {
 	margin: 16px;
+	max-width: 1200px;
 }
 
 .page-header {
@@ -73,4 +74,14 @@
 
 .grid-cell {
 	flex: 1;
+}
+
+/**
+ * Media queries
+ */
+
+@media screen and (min-width: 1232px) {
+	.container {
+		margin: 16px auto;
+	}
 }
