--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@
 }
 
 .header-logo {
-    max-width: 10em;
+    max-width: 6em;
 }
 
 .header-text {
@@ -34,7 +34,7 @@
 .header-title {
 	font-weight: 200;
 	font-size: 2em;
-	margin-top: 0;
+	margin-top: 0.25em;
 	margin-bottom: 0;
 }
 
@@ -117,14 +117,6 @@
         text-align: right;
     }
 
-    .header-title {
-        font-size: 3em;
-    }
-
-    .header-subtitle {
-        font-size: 1.25em;
-    }
-
     .grid-small-fit > .grid-cell {
         flex: 1;
     }
@@ -143,6 +135,17 @@
 
     .grid-small-1of4 > .grid-cell {
         flex: 0 0 25%;
+    }
+}
+
+@media screen and (min-width: 40em) {
+    .header-title {
+        font-size: 3em;
+        margin-top: 0;
+    }
+
+    .header-subtitle {
+        font-size: 1.25em;
     }
 }
 
