--- a/css/main.css
+++ b/css/main.css
@@ -58,8 +58,11 @@
 }
 
 .portfolio-item-link {
+    display: block;
 	font-weight: 200;
 	font-size: 0.8em;
+    min-height: 48px;
+    padding-top: 16px;
 	text-decoration: none;
 }
 
