--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,24 @@
 	text-decoration: none;
 }
 
+.page-footer {
+    border-top: 4px solid #7d97ad;
+}
+
+[class*="zocial-"]:before {
+	color: #02b3e4;
+    display: inline-block;
+    font-family: "zocial", sans-serif;
+    width: 1.5em;
+}
+
+.social-links a {
+    display: block;
+    min-height: 48px;
+    padding-top: 16px;
+    text-decoration: none;
+}
+
 /**
  * Grid layout
  *
@@ -153,6 +171,10 @@
 }
 
 @media screen and (min-width: 60em) {
+    .colophon {
+        text-align: right;
+    }
+
     .grid-large-fit > .grid-cell {
         flex: 1;
     }
