--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@
     width: 1.5em;
 }
 
-.social-links a {
+.social-links-item {
     display: block;
     min-height: 48px;
     padding-top: 16px;
